...
    override func loadView() {
        self.view = self.searchView
    }

    override func viewDidLoad() {
        super.viewDidLoad()
        self.title = "IMDB Search"
        self.navigationController?.navigationBar.prefersLargeTitles = true
        
        let searchController = UISearchController(searchResultsController: nil)
        searchController.searchResultsUpdater = self 
        searchController.obscuresBackgroundDuringPresentation = false
        searchController.searchBar.placeholder = "Search Media"
        self.navigationItem.searchController = searchController
        self.definesPresentationContext = true
        self.navigationItem.hidesSearchBarWhenScrolling = false
        self.searchController = searchController
    }
    
...
